--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Movie Tribute</title>
-</head>
-<body>
-<h1>JOY (2015)</h1>
-  <img src="http://s3.foxmovies.com/foxmovies/production/films/109/images/feature/aa-joy-header-may3-front-main-stage.jpg" alt"Image for Joy(Movie)" style="width:80%">
-<ul>
-  <li><a href="http://www.foxmovies.com/movies/joy">About</a></li>
-  <li>Plot Summary</li>
-  <li>Trailers</li>
- </ul>
- <p>Joy is bright, energetic young woman with a complicated personal life. Divorced with two children, her ex-husband lives in her basement. Her mother lives upstairs and watches soap operas all day, while her father (divorced from her mom for 17 years) recently moved into her basement. Joy designs a revolutionary new mop and this leads to all sorts of adventures, good and bad.</p>
+  <head>
+    <meta charset="utf-8">
+    <title>All Tributes Page</title>
+  </head>
+  <body>
+    <h1>Li Yuna & Grace's Favourite Movies</h1>
+    <ul>
+      <li>
+        <a href="Shawshank.html">Li Yuan - The Shawshank Redmeption</a>
+      </li>
+      <li>
+        <a href="Joy.html">Grace - Joy</a>
+      </li>
+    </ul>
   </body>
 </html>
-  
